sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:4: error: '(' expected but identifier found.
    if plusPetit(i,i+1) {
       ^AlgCocktailSort1:7: error: illegal start of simple expression
  }
  ^AlgCocktailSort1:9: error: '(' expected but identifier found.
    if plusPetit((getNombreValeurs-2)-i,(getNombreValeurs-2)-i-1) {
       ^AlgCocktailSort1:12: error: illegal start of simple expression
  }
  ^